# prague

./: .gitignore  Calculating Partial Feature Vector Extension.ipynb  Convert feature matrix tsv to ternary vector.ipynb  Generating extensions.ipynb  README.md  Representation Scratchpad.ipynb  TODO.md  brh.npy  developing_extensions.ipynb  equivalence_class_version_2.ipynb  flake.nix  kernels.nix  overrides.nix  prague_env.yml  refactoring_extensions.ipynb  roman.py
data/: bakovic_chart_riggle_hayes.tsv  bakovic_chart_riggle_hayes_remapped.tsv  brh.npy  brh_features.txt  hayes.npy  hayes.tsv  hayes_features.txt  hayes_remapped.tsv  mielke_spe.tsv
demo/: Data prep.ipynb  Identifying compatible feature vectors.ipynb  Transformation hyperstructures.ipynb
kernels/python/: pyproject.toml  pyproject.toml.basic
prague/: __init__.py  convert.py  feature_vector.py  flycheck_feature_vector.py  utility.py
scratch/: Convert feature matrix tsv to ternary vector.ipynb  Generating extensions.ipynb  empty_extension_experiments.ipynb  equivalence_class_version_2.ipynb  refactoring_extensions.ipynb
tests/: test_feature_vector.py
