[tool.poetry]
name = "prague"
version = "0.1.0"
description = ""
authors = ["Eric Meinhardt <ericmeinhardt@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
funcy = "^2.0"
# conda-build = "^2.1.5"
### pip = "^23.1"
# jupyter = "^1.0.0"
scipy = "^1.10.1"
# matplotlib = "^3.7.1"
numpy = "^1.24.2"
tqdm = "^4.65.0"
joblib = "^1.2.0"
## numba = "^0.56.4"
## dask = "^2023.4.0"
nose = "^1.3.7"
# ## h5py = "^3.8.0"          # TODO?
pytest = "^7.3.1"
# # jupyter-contrib-nbextensions = "^0.7.0"  # TODO
# papermill = "^2.4.0"
# ## plotnine = "^0.10.1"
# ## panel = "^0.14.4"
# ## bokeh = "^3.1.0"
# ## holoviews = "^1.15.4"
# ## hvplot = "^0.8.3"
# ## param = "^1.13.0"
# ## datashader = "^0.14.4"
# ## dask-jobqueue = "^0.8.1"
# ## tiledb-py = "^0.21.2"
# watermark = "^2.3.1"        # TODO?
# # opt-einsum = "^3.3.0"     # TODO?
# ## distributed = "^2023.4.0"
# ## fsspec = ???
cloudpickle = "^2.2.1"
# ## fastparquet = "^2023.2.0"
murmurhash = "^1.0.9"
# ## partd = "^1.4.0"
# ## pyarrow = "^11.0.0"
toolz = "^0.12.0"
xxhash = "^3.2.0"
# ## pytorch = "^1.0.2"
# ## torchvision = "^0.15.1"
# # cityhash = "^0.4.6"       # TODO?
# # nbimporter = "^0.3.4"     # TODO?
more-itertools = "^9.1.0"
# # sparse = "^0.14.0"        # TODO?
# setuptools = "^67.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
